# git-fans

./: CMakeLists.txt  README.md
cmake_modules/: FindSingular.cmake
input_files/: m5_ideal  m5_torus_action  m6_reduced_ideal  m6_reduced_simplex_orbit_representatives  m6_reduced_symmetry_group  m6_reduced_torus_action
singular/: CMakeLists.txt  gitfanparallel.lib  load_git_cones.lib
src/: CMakeLists.txt  config.hpp.in  installation.cpp.in  installation.hpp  project_revision.hpp.in
src/logging/: CMakeLists.txt  command_line_args_printer.cpp  command_line_args_printer.hpp  format.cpp  format.hpp  logging.cpp  logging.hpp  logging_options.cpp  logging_options.hpp  performance_record.cpp  performance_record.hpp  scope_profiler.hpp
src/logging/statistics/: counter_dump_reader.cpp  counter_dump_reader.hpp  distribution.hpp  main.cpp  performance_dump_reader.hpp  performance_dump_reader.hxx
src/storage/: CMakeLists.txt  conestorage.cpp  conestorage.hpp  options.cpp  options.hpp  service_provider.cpp  service_provider.hpp
src/storage/filesystem/: constant_conestorage.cpp  constant_conestorage.hpp  linear_conestorage.cpp  linear_conestorage.hpp  string_container.cpp  string_container.hpp
src/storage/rpc/: client.hpp  protocol.hpp  server.cpp  server.hpp
src/util-gitfan/: CMakeLists.txt  conversion.hpp  conversion.hxx  filecontent_operations.cpp  filecontent_operations.hpp  gitfanImpl.cpp  gitfanInterface.hpp  lru_cache.hpp  nonexisting_path_or_nonempty_file.hpp  ostreamOverloads.cpp  ostreamOverloads.hpp  paths.hpp  simplexfaceiterator.cpp  simplexfaceiterator.hpp  singular_commands.cpp  singular_commands.hpp  singular_commands.hxx  singular_library_wrapper.cpp  singular_library_wrapper.hpp  type_aliases.hpp
tests/: CMakeLists.txt  conestorage.cpp  conversion.cpp.in  gitfanImpl.cpp.in  logging.cpp  lru_cache.cpp  main.cpp  main.hpp  playground.cpp.in  simplexfaceiterator.cpp  temporaryUniquePath.hpp  util.cpp  util.hpp  util.hxx  xpnet_tests.cpp.in
tests/singular_commands/: call_and_return_result.cpp  create_symbol_and_check_existance.cpp  discard_interpreter_output.cpp  extract_intvec_and_list.cpp  kill_symbols.cpp  load_library.cpp.in  load_ssi_file.cpp.in  put_intvec_and_list.cpp  write_ssi_file.cpp.in
tests/singular_data/: CMakeLists.txt  generate.sh  generation  generation.lib  m5_simplex_faces  m5_simplex_orbit_representatives  m5_symmetry_group  sample_pnet_list  singularlibrary.lib
workflow/: CMakeLists.txt  full_dim_afaces.xpnet  full_dim_afaces_frame.xpnet  gitfan.xpnet  list_manipulation.xpnet.in  list_manipulation_example_frame.xpnet  list_manipulation_function_container.hpp  orbit_cones_from_afaces.xpnet  orbit_cones_from_afaces_frame.xpnet  traverse_gitfan.xpnet  traverse_gitfan_frame.xpnet  types.xpnet
